--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,7 @@ Source: nox
 Section: net
 Priority: extra
 Maintainer: NOX team <nox@noxrepo.org>
-Build-Depends: debhelper (>= 7), autoconf (>= 2.60), automake (>= 1.10), libssl-dev, pkg-config (>= 0.21), po-debconf, bzip2, openssl, libboost-test-dev, libboost-filesystem-dev, libboost-filesystem-dev, libxerces-c2-dev, python2.5-dev, python-openssl, libsqlite3-dev, swig, libboost-thread-dev, python-sphinx, libldap2-dev, sun-java6-jre
+Build-Depends: debhelper (>= 7), autoconf (>= 2.60), automake (>= 1.10), libssl-dev, pkg-config (>= 0.21), po-debconf, bzip2, openssl, libboost-test-dev, libboost-filesystem-dev, libxerces-c2-dev, python2.5-dev, python-openssl, libsqlite3-dev, swig, libboost-thread-dev, python-sphinx, libldap2-dev, java6-sdk
 Standards-Version: 3.7.3
 Homepage: http://www.noxrepo.org
 
