Adding new Switch_features_event and corresponding handlers/converters

--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -14,6 +14,7 @@ cnode.hh					\
 command-line.hh					\
 datapath-join.hh				\
 datapath-leave.hh				\
+switch-features.hh              \
 datapath.hh					\
 desc-stats-in.hh				\
 echo-request.hh					\
